1. 点击个人信息页邮箱列表跳转至相关页的逻辑完成 2. 邮箱页的UI和逻辑完成 3. 个人信息页UI完善

--- a/app/src/main/res/layout/fragment_edit_timezone.xml
+++ b/app/src/main/res/layout/fragment_edit_timezone.xml
@@ -19,7 +19,7 @@
             android:src="@drawable/ic_nav_back_arrow"/>
 
         <EditText
-            android:textCursorDrawable="@null"
+            android:focusable="true"
             android:id="@+id/et_information_timezone_find"
             android:background="@null"
             android:layout_centerVertical="true"
