--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -51,6 +51,9 @@
     <color name="color_36bdff">#36BDFF</color>
     <color name="color_bae3bc">#BAE3BC</color>
     <color name="color_f8bfbf">#F8BFBF</color>
+    <color name="color_8c8c8c">#8C8C8C</color>
+    <color name="color_fdc0c0">#FDC0C0</color>
+    <color name="color_ff3b30">#FF3B30</color>
 
 
     <color name="color_888888">#888888</color>
