找到position,不需要使用notifyItemRangeChanged

--- a/app/src/main/res/layout/layout_item_vedio_wonderful.xml
+++ b/app/src/main/res/layout/layout_item_vedio_wonderful.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/lLayout_item_wonderful"
     android:layout_width="match_parent"
     android:layout_height="225dp"
     android:clickable="true"
@@ -17,9 +18,9 @@
         hunt:dashLineWidth="2dp"
         hunt:innerCircleColor="@color/color_e8e8e8"
         hunt:innerCircleRadius="6dp"
-        hunt:outerCircleStrokeWidth="4dp"
         hunt:outerCircleColor="@color/color_white"
         hunt:outerCircleRadius="10dp"
+        hunt:outerCircleStrokeWidth="4dp"
         hunt:outerCircleY="10dp" />
 
     <RelativeLayout
@@ -40,14 +41,14 @@
             android:textSize="13sp" />
 
         <ImageView
-            android:transitionName="picDetailsFragment"
             android:id="@+id/iv_wonderful_item_content"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/fLayout_wonderful_item_bottom"
             android:layout_below="@+id/tv_wonderful_item_date"
             android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/ic_launcher"
+            android:transitionName="picDetailsFragment" />
 
 
         <FrameLayout
