--- a/app/src/main/res/layout/layout_item_picture_wonderful.xml
+++ b/app/src/main/res/layout/layout_item_picture_wonderful.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/lLayout_item_wonderful"
     android:layout_width="match_parent"
     android:layout_height="225dp"
     android:clickable="true"
@@ -93,12 +94,11 @@
             </LinearLayout>
 
             <TextView
+                style="@style/ripple_background_borderless"
                 android:id="@+id/tv_wonderful_item_share"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="end|center_vertical"
-                android:layout_marginLeft="252dp"
-                android:layout_marginStart="252dp"
                 android:drawableLeft="@drawable/icon_share_item_wonderful_selector"
                 android:drawablePadding="4dp"
                 android:drawableStart="@drawable/icon_share_item_wonderful_selector"
