1. 将设备详情的listView改为recyclerView进行实现 2. 修改recyclerView的adapter 3. 添加时区功能的bean类 4. 完成了帮助与反馈的热门问题页面的UI和功能 5. 完成了帮助与反馈的反馈页面的基础UI

--- a/app/src/main/res/layout/fragment_home_mine_personal_information.xml
+++ b/app/src/main/res/layout/fragment_home_mine_personal_information.xml
@@ -66,6 +66,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/rLayout_home_mine_personal_pic"
         android:layout_width="match_parent"
         android:layout_height="72dp">
 
