--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -54,6 +54,8 @@
     <color name="color_8c8c8c">#8C8C8C</color>
     <color name="color_fdc0c0">#FDC0C0</color>
     <color name="color_ff3b30">#FF3B30</color>
+    <color name="color_e1e1e1">#E1E1E1</color>
+    <color name="color_f0f0f0">#F0F0F0</color>
 
 
     <color name="color_888888">#888888</color>
