--- a/app/src/main/res/layout/fragment_edit_timezone.xml
+++ b/app/src/main/res/layout/fragment_edit_timezone.xml
@@ -56,7 +56,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_white">
-        <ListView
+        <android.support.v7.widget.RecyclerView
             android:overScrollMode="never"
             android:layout_marginTop="14dp"
             android:background="@color/color_white"
@@ -69,16 +69,15 @@
             android:id="@+id/lv_information_timezone_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        </ListView>
+        </android.support.v7.widget.RecyclerView>
         <TextView
+            android:id="@+id/tv_timezone_noresult"
+            android:textSize="16sp"
             android:visibility="gone"
-            android:id="@+id/tv_information_timezone_noresult"
+            android:text="无结果"
             android:layout_marginTop="90dp"
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="无结果"
-            android:textSize="15sp"
-            android:textColor="#666666"/>
+            android:layout_height="wrap_content"/>
     </RelativeLayout>
 </LinearLayout>
