--- a/app/src/main/res/layout/fragment_mine_help.xml
+++ b/app/src/main/res/layout/fragment_mine_help.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:hunt="http://schemas.android.com/apk/res-auto"
               android:clickable="true"
               android:orientation="vertical"
               android:layout_width="match_parent"
@@ -13,22 +12,21 @@
         android:layout_width="match_parent"
         android:layout_height="73dp"
         android:background="#0BA8CF">
-        <TextView
-            android:layout_marginTop="26dp"
-            android:textColor="@color/color_white"
-            android:text="返回"
-            android:id="@+id/tv_mine_help_back"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:padding="15dp"/>
-
-
-        <TextView
-            android:layout_marginBottom="11dp"
+        <ImageView
+            android:clickable="true"
             android:layout_alignParentBottom="true"
-            android:layout_centerInParent="true"
-            android:gravity="center"
-            android:layout_width="match_parent"
+            android:id="@+id/iv_home_mine_help_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:src="@drawable/ic_nav_back_arrow"/>
+
+
+        <TextView
+            android:layout_marginBottom="12dp"
+            android:layout_alignParentBottom="true"
+            android:layout_marginLeft="48dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="帮助与反馈"
             android:textSize="18sp"
@@ -36,72 +34,34 @@
 
 
         <TextView
-            android:layout_marginTop="26dp"
+            android:layout_alignParentBottom="true"
+            android:textSize="14sp"
             android:textColor="@color/color_white"
             android:clickable="true"
             android:text="意见反馈"
             android:layout_alignParentRight="true"
             android:id="@+id/tv_mine_help_suggestion"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:padding="15dp"/>
     </RelativeLayout>
 
-    <TextView
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="10dp"
-        android:textColor="@color/color_black"
-        android:textSize="18sp"
+    <ProgressBar
+        android:id="@+id/pb_mine_help"
+        android:progressDrawable="@drawable/progressbar"
+        android:visibility="gone"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:max="200"
+        android:progress="30"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="热门问题"/>
+        android:layout_height="3dp"/>
 
-        <com.cylan.jiafeigou.widget.HomeMineItemView
-            android:clickable="true"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            hunt:rightDrawable="@drawable/icon_mine_arrow_next"
-            hunt:text="设备离线，或连接中"
-            hunt:textColor="@color/color_333333"
-            hunt:textSize="16sp"/>
+    <WebView
+        android:visibility="visible"
+        android:id="@+id/wv_mine_help"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-
-        <com.cylan.jiafeigou.widget.HomeMineItemView
-            android:clickable="true"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            hunt:rightDrawable="@drawable/icon_mine_arrow_next"
-            hunt:text="添加设备，提示“找不到设备”"
-            hunt:textColor="@color/color_333333"
-            hunt:textSize="16sp"/>
-
-        <com.cylan.jiafeigou.widget.HomeMineItemView
-            android:clickable="true"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            hunt:rightDrawable="@drawable/icon_mine_arrow_next"
-            hunt:text="Android系统：连接设备的WiFi和密码是什么"
-            hunt:textColor="@color/color_333333"
-            hunt:textSize="16sp"/>
-
-        <com.cylan.jiafeigou.widget.HomeMineItemView
-            android:clickable="true"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            hunt:rightDrawable="@drawable/icon_mine_arrow_next"
-            hunt:text="一个设备可以在多个客户端上使用吗"
-            hunt:textColor="@color/color_333333"
-            hunt:textSize="16sp"/>
-
-        <com.cylan.jiafeigou.widget.HomeMineItemView
-            android:clickable="true"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            hunt:rightDrawable="@drawable/icon_mine_arrow_next"
-            hunt:text="查看直播，宽带最低需要多少"
-            hunt:textColor="@color/color_333333"
-            hunt:textSize="16sp"/>
-
+    </WebView>
 
 </LinearLayout>
