--- a/app/src/main/res/layout/fragment_edit_timezone.xml
+++ b/app/src/main/res/layout/fragment_edit_timezone.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:clickable="true"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:clickable="true"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <RelativeLayout
         android:layout_marginTop="25dp"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:background="#0BA8CF">
+
         <ImageView
             android:id="@+id/iv_information_back"
             android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:padding="15dp"
-            android:src="@drawable/ic_nav_back_arrow"/>
+            android:src="@drawable/ic_nav_back_arrow" />
 
         <EditText
             android:focusable="true"
@@ -29,7 +30,7 @@
             android:hint="搜索"
             android:textColor="@color/color_white"
             android:textColorHint="#B9DFED"
-            android:textSize="18sp"/>
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/tv_information_timezone_text"
@@ -39,7 +40,7 @@
             android:layout_height="wrap_content"
             android:text="时区"
             android:textSize="18sp"
-            android:textColor="#FFFFFF"/>
+            android:textColor="#FFFFFF" />
 
 
         <ImageView
@@ -49,13 +50,14 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:padding="15dp"
-            android:src="@drawable/icon_search"/>
+            android:src="@drawable/icon_search" />
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_white">
+
         <android.support.v7.widget.RecyclerView
             android:overScrollMode="never"
             android:layout_marginTop="14dp"
@@ -68,8 +70,8 @@
             android:layout_marginRight="20dp"
             android:id="@+id/lv_information_timezone_detail"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-        </android.support.v7.widget.RecyclerView>
+            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+
         <TextView
             android:id="@+id/tv_timezone_noresult"
             android:textSize="16sp"
@@ -78,6 +80,6 @@
             android:layout_marginTop="90dp"
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
     </RelativeLayout>
 </LinearLayout>
