--- a/app/src/main/res/drawable/little_shape.xml
+++ b/app/src/main/res/drawable/little_shape.xml
@@ -2,7 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <gradient android:angle="270" android:endColor="#00ffffff" android:startColor="#cccccccc" android:type="linear" />
+            <gradient android:angle="270"
+                android:endColor="#00ffffff"
+                android:startColor="#cccccccc"
+                android:type="linear" />
         </shape>
     </item>
 </selector>
