--- a/app/src/main/res/layout/fragment_home_mine_suggestion.xml
+++ b/app/src/main/res/layout/fragment_home_mine_suggestion.xml
@@ -1,56 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
-    android:clickable="true"
-    android:orientation="vertical">
-
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    >
+    <RelativeLayout
+        android:id="@+id/rl_home_mine_suggestion"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/color_white"
-        android:clickable="true"
-        android:orientation="vertical">
+        android:layout_height="73dp"
+        android:background="#0BA8CF">
 
-        <RelativeLayout
-            android:id="@+id/rl_home_mine_suggestion"
+        <ImageView
+            android:id="@+id/iv_home_mine_suggestion_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:padding="15dp"
+            android:src="@drawable/ic_nav_back_arrow" />
+
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="73dp"
-            android:layout_alignParentTop="true"
-            android:background="#0BA8CF">
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="12dp"
+            android:layout_marginLeft="48dp"
+            android:text="帮助与反馈"
+            android:textColor="@color/color_white"
+            android:textSize="18sp" />
 
-            <ImageView
-                android:id="@+id/iv_home_mine_suggestion_back"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:padding="15dp"
-                android:src="@drawable/ic_nav_back_arrow" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_marginBottom="12dp"
-                android:layout_marginLeft="48dp"
-                android:text="帮助与反馈"
-                android:textColor="@color/color_white"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/tv_mine_help_suggestion_clear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentRight="true"
-                android:clickable="true"
-                android:padding="15dp"
-                android:text="清空"
-                android:textColor="@color/color_white"
-                android:textSize="14sp" />
-        </RelativeLayout>
-
+        <TextView
+            android:id="@+id/tv_mine_help_suggestion_clear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:clickable="true"
+            android:padding="15dp"
+            android:text="清空"
+            android:textColor="@color/color_white"
+            android:textSize="14sp" />
+    </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/rl_home_mine_suggestion_bottom"
@@ -88,20 +78,19 @@
                 android:layout_marginTop="19dp"
                 android:clickable="true"
                 android:contextClickable="true"
-                android:text="帮助与反馈"
+                android:text="发送"
                 android:textColor="@color/color_4b9fd5"
                 android:textSize="18sp" />
         </RelativeLayout>
 
         <android.support.v7.widget.RecyclerView
+            android:paddingBottom="5dp"
             android:id="@+id/rv_home_mine_suggestion"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/rl_home_mine_suggestion_bottom"
-            android:layout_below="@id/rl_home_mine_suggestion"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/rl_home_mine_suggestion_bottom"
+            android:layout_below="@+id/rl_home_mine_suggestion"
             android:overScrollMode="never"
             android:scrollbars="none" />
 
-
-    </RelativeLayout>
-</LinearLayout>
+</RelativeLayout>
