--- a/app/src/main/res/layout/fragment_mine_help.xml
+++ b/app/src/main/res/layout/fragment_mine_help.xml
@@ -14,14 +14,14 @@
         android:layout_height="73dp"
         android:background="#0BA8CF">
 
-        <TextView
+        <!--<TextView
             android:id="@+id/tv_mine_help_back"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="26dp"
             android:padding="15dp"
             android:text="返回"
-            android:textColor="@color/color_white" />
+            android:textColor="@color/color_white" />-->
 
         <ImageView
             android:id="@+id/iv_home_mine_help_back"
