--- a/app/src/main/res/layout/fragment_home_mine_personal_information.xml
+++ b/app/src/main/res/layout/fragment_home_mine_personal_information.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/ll_container"
     android:clickable="true"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -172,6 +173,7 @@
 
 
     <RelativeLayout
+        android:id="@+id/RLayout_home_mine_personal_phone"
         android:layout_width="match_parent"
         android:layout_height="72dp">
 
@@ -186,6 +188,7 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/tv_home_mine_personal_phone"
             android:layout_below="@id/tv_my_number"
             android:paddingTop="8dp"
             android:layout_marginLeft="20dp"
