--- a/app/src/main/res/layout/activity_suggestionchat_container.xml
+++ b/app/src/main/res/layout/activity_suggestionchat_container.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fl_container"
     android:background="#00000000"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
