--- a/app/src/main/res/layout/layout_item_picture_wonderful.xml
+++ b/app/src/main/res/layout/layout_item_picture_wonderful.xml
@@ -3,6 +3,7 @@
     android:id="@+id/lLayout_item_wonderful"
     android:layout_width="match_parent"
     android:layout_height="225dp"
+
     android:clickable="true"
     android:orientation="horizontal"
     android:paddingLeft="10dp"
@@ -18,9 +19,9 @@
         hunt:dashLineWidth="2dp"
         hunt:innerCircleColor="@color/color_white"
         hunt:innerCircleRadius="6dp"
-        hunt:outerCircleStrokeWidth="4dp"
         hunt:outerCircleColor="@color/color_e8e8e8"
         hunt:outerCircleRadius="10dp"
+        hunt:outerCircleStrokeWidth="4dp"
         hunt:outerCircleY="10dp" />
 
     <RelativeLayout
@@ -42,7 +43,7 @@
 
         <ImageView
             android:id="@+id/iv_wonderful_item_content"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_above="@+id/fLayout_wonderful_item_bottom"
             android:layout_below="@+id/tv_wonderful_item_date"
@@ -94,8 +95,8 @@
             </LinearLayout>
 
             <TextView
-                style="@style/ripple_background_borderless"
                 android:id="@+id/tv_wonderful_item_share"
+                style="@style/ripple_background_borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_gravity="end|center_vertical"
