--- a/app/src/main/res/layout/fragment_home_mine.xml
+++ b/app/src/main/res/layout/fragment_home_mine.xml
@@ -54,6 +54,7 @@
         </LinearLayout>
 
         <FrameLayout
+            android:clickable="true"
             android:id="@+id/rLayout_msg_box"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
