图片加载模型

--- a/app/src/main/res/layout/layout_item_picture_wonderful.xml
+++ b/app/src/main/res/layout/layout_item_picture_wonderful.xml
@@ -43,12 +43,12 @@
 
         <ImageView
             android:id="@+id/iv_wonderful_item_content"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/fLayout_wonderful_item_bottom"
             android:layout_below="@+id/tv_wonderful_item_date"
+            android:minWidth="200dp"
             android:scaleType="fitXY"
-            android:src="@drawable/ic_launcher"
             android:transitionName="picDetailsFragment" />
 
 
