--- a/app/src/main/res/layout/fragment_home_wonderful_ext.xml
+++ b/app/src/main/res/layout/fragment_home_wonderful_ext.xml
@@ -19,7 +19,7 @@
             app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlways"
             app:statusBarScrim="@android:color/transparent">
 
-            <include layout="@layout/fragment_home_page_list_header" />
+            <include layout="@layout/fragment_home_wonderful_header" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -28,21 +28,21 @@
                 android:background="@android:color/transparent"
                 app:layout_collapseMode="pin">
 
-                <FrameLayout
+                <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ImageView
-                        android:id="@+id/imgV_add_devices"
-                        style="@style/ripple_background_borderless"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="end|center_vertical"
-                        android:layout_marginLeft="5dp"
-                        android:layout_marginRight="5dp"
-                        android:padding="10dp"
-                        android:src="@drawable/btn_common_add" />
-                </FrameLayout>
+                    <!--<ImageView-->
+                    <!--android:id="@+id/imgV_add_devices"-->
+                    <!--style="@style/ripple_background_borderless"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_gravity="end|center_vertical"-->
+                    <!--android:layout_marginLeft="5dp"-->
+                    <!--android:layout_marginRight="5dp"-->
+                    <!--android:padding="10dp"-->
+                    <!--android:src="@drawable/btn_common_add" />-->
+                </View>
             </android.support.v7.widget.Toolbar>
 
 
@@ -51,7 +51,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/srLayout_home_page_container"
+        android:id="@+id/fLayout_main_content_holder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
@@ -63,7 +63,7 @@
             android:background="@color/color_white">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/rV_devices_list"
+                android:id="@+id/rV_wonderful_list"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </FrameLayout>
