--- a/app/src/main/res/layout/fragment_home_wonderful_header.xml
+++ b/app/src/main/res/layout/fragment_home_wonderful_header.xml
@@ -1,5 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rLayoutHomeWonderfulHeaderContainer"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/fLayoutHomeWonderfulHeaderContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -37,19 +37,17 @@
     </RelativeLayout>
 
     <ImageView
-        android:id="@+id/img_cover"
+        android:id="@+id/img_wonderful_title_cover"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignBottom="@id/rl_top_head_wonder"
         android:alpha="0"
         android:background="@color/color_0ba8cf" />
 
     <FrameLayout
         android:id="@+id/fLayout_date_head_wonder"
         android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/rl_top_head_wonder"
-        android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="25dp"
         android:descendantFocusability="blocksDescendants">
@@ -59,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@drawable/btn_date_head_wondeful_selector" />
+            android:background="@drawable/btn_date_head_wonderful_selector" />
 
         <com.cylan.jiafeigou.widget.textview.WonderfulTitleHead
             android:id="@+id/tv_date_item_head_wonder"
@@ -73,4 +71,4 @@
             android:textColor="@color/color_788291"
             android:textSize="14sp" />
     </FrameLayout>
-</RelativeLayout>
+</FrameLayout>
